# inJail

./: .gitignore  CMakeLists.txt  Makefile  README.md
include/: Camera.h  Mesh.h  Model.h  Shader.h  Skybox.h  skybox.cpp
resources/models/: Huge Battery.mtl  Keycard.mtl  Lamp.mtl  Mapa.mtl  The Gun.mtl  opened-door.mtl  prisao.mtl
resources/shaders/: lighting.frag  lighting.vs  skybox.vs
resources/skybox/: rockq3_bk.tga  rockq3_dn.tga  rockq3_ft.tga  rockq3_lf.tga  rockq3_rt.tga  rockq3_up.tga
src/: .main.cpp.swp  main.cpp
